# chunkvault

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
chunkvault/: __init__.py  api.py  cli.py  errors.py  hashing.py  models.py  vault.py
tests/: test_vault.py
